--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "applications": {
     "gecko": {
-      "id": "githublisten1@gmail.com",
+      "id": "angelfall@gmail.com",
       "strict_min_version": "45.0"
     }
   },
